--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+##Port on which to run the application
+server.port=8081
 
+##Specify DBMS
+spring.jpa.database=MYSQL
+
+##Show/Hide SQL Queries
+spring.jpa.show-sql=false
+
+##Hibernate DDL Auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+##Spring Datasource Details
+spring.datasource.url=jdbc:mysql://localhost:3306/notetakingdb?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
