--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8081
 spring.jpa.database=MYSQL
 
 ##Show/Hide SQL Queries
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 ##Hibernate DDL Auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto=update
