Added Search Endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,18 @@ server.port=8081
 ##Specify DBMS
 spring.jpa.database=MYSQL
 
-##Show/Hide SQL Queries
+##For Debugging the SQL Queries
+#Show/Hide SQL Queries
 spring.jpa.show-sql=true
+#To format the SQL Query
+spring.jpa.properties.hibernate.format_sql=true
+#Show SQL Bind Values
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 ##Hibernate DDL Auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto=update
 
+##To let Hibernate know which DB it needs to create SQL for
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 ##Spring Datasource Details
