--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 ##Port on which to run the application
 server.port=8081
 
-##Specify DBMS
-spring.jpa.database=MYSQL
-
 ##For Debugging the SQL Queries
 #Show/Hide SQL Queries
 spring.jpa.show-sql=true
@@ -15,6 +12,9 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 ##Hibernate DDL Auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto=update
 
+##Specify DBMS
+spring.jpa.database=MYSQL
+
 ##To let Hibernate know which DB it needs to create SQL for
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
@@ -23,3 +23,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/notetakingdb?createDatabaseIfN
 spring.datasource.username=root
 spring.datasource.password=password123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+##Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9092
