--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 ##Port on which to run the application
 server.port=8081
 
+##Stop logging in to your Console
+logging.level.root=OFF
+
 ##For Debugging the SQL Queries
 #Show/Hide SQL Queries
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 #To format the SQL Query
 spring.jpa.properties.hibernate.format_sql=true
 #Show SQL Bind Values
-logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
 ##Hibernate DDL Auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto=update
